<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/view_title_layout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/share_tip"
        android:textColor="@color/color_ff"
        android:textSize="@dimen/font_14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/share_tip1"
        android:textColor="@color/color_168"
        android:textSize="@dimen/font_14" />


    <ImageView
        android:id="@+id/qr_code"
        android:layout_width="@dimen/dp_150"
        android:layout_height="@dimen/dp_150"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_40"
        android:scaleType="centerCrop"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/share_tip2"
        android:textColor="@color/color_168"
        android:textSize="@dimen/font_14" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        android:background="@drawable/bg_gay5_shape"
        android:padding="@dimen/dp_10"
        android:textColor="@color/color_ff"
        android:textSize="@dimen/font_14"
        android:text="@string/share_tip3"/>

    <Button
        android:id="@+id/bt_share_friends"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_47"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_marginEnd="@dimen/dp_15"
        android:background="@drawable/bg_blue_168_shape"
        android:onClick="onClick"
        android:text="@string/share_friends"
        android:textColor="@color/white"
        android:textSize="@dimen/font_17" />
</LinearLayout>