<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/view_title_layout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/old_password"
        android:textColor="@color/color_ff"
        android:textSize="@dimen/font_16" />

    <com.pay.poriot.ui.widget.CleanableEditText
        android:id="@+id/edt_old_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_47"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_4"
        android:layout_marginEnd="@dimen/dp_15"
        android:background="@color/color_3"
        android:gravity="center_vertical"
        android:hint="@string/input_old_password"
        android:maxLines="1"
        android:paddingLeft="@dimen/dp_5"
        android:textColor="@color/color_1"
        android:textColorHint="@color/color_2"
        android:textCursorDrawable="@drawable/edt_cursor_color"
        android:textSize="@dimen/font_16" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/new_password"
        android:textColor="@color/color_ff"
        android:textSize="@dimen/font_16" />

    <com.pay.poriot.ui.widget.CleanableEditText
        android:id="@+id/edt_new_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_47"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_4"
        android:layout_marginEnd="@dimen/dp_15"
        android:background="@color/color_3"
        android:gravity="center_vertical"
        android:hint="@string/input_new_password"
        android:maxLines="1"
        android:paddingLeft="@dimen/dp_5"
        android:textColor="@color/color_1"
        android:textColorHint="@color/color_2"
        android:textCursorDrawable="@drawable/edt_cursor_color"
        android:textSize="@dimen/font_16" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/confirm_password"
        android:textColor="@color/color_ff"
        android:textSize="@dimen/font_16" />

    <com.pay.poriot.ui.widget.CleanableEditText
        android:id="@+id/edt_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_47"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_4"
        android:layout_marginEnd="@dimen/dp_15"
        android:background="@color/color_3"
        android:gravity="center_vertical"
        android:hint="@string/input_confirm_new_password"
        android:maxLines="1"
        android:paddingLeft="@dimen/dp_5"
        android:textColor="@color/color_1"
        android:textColorHint="@color/color_2"
        android:textCursorDrawable="@drawable/edt_cursor_color"
        android:textSize="@dimen/font_16" />


    <Button
        android:id="@+id/bt_confirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_47"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_marginEnd="@dimen/dp_15"
        android:background="@drawable/bg_blue_168_shape"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:onClick="onClick"
        android:textSize="@dimen/font_17" />
</LinearLayout>