<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.pay.poriot.ui.widget.CleanableEditText
        android:id="@+id/edt_content"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_100"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        android:background="@color/color_3"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="top|left"
        android:paddingStart="@dimen/dp_5"
        android:paddingLeft="@dimen/dp_5"
        android:paddingTop="@dimen/dp_10"
        android:textColor="@color/color_1"
        android:textColorHint="@color/color_2"
        android:textCursorDrawable="@drawable/edt_cursor_color"
        android:textSize="@dimen/font_13" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/wallet_password"
        android:textColor="@color/color_ff"
        android:textSize="@dimen/font_13" />

    <com.pay.poriot.ui.widget.CleanableEditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_4"
        android:layout_marginEnd="@dimen/dp_15"
        android:background="@color/color_3"
        android:gravity="center_vertical"
        android:hint="@string/edit_input_wallet_password"
        android:inputType="numberPassword"
        android:maxLines="1"
        android:paddingLeft="@dimen/dp_5"
        android:textColor="@color/color_1"
        android:textColorHint="@color/color_2"
        android:textCursorDrawable="@drawable/edt_cursor_color"
        android:textSize="@dimen/font_13" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/confirm_wallet_password"
        android:textColor="@color/color_ff"
        android:textSize="@dimen/font_13" />

    <com.pay.poriot.ui.widget.CleanableEditText
        android:id="@+id/edt_sure_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_4"
        android:layout_marginEnd="@dimen/dp_15"
        android:background="@color/color_3"
        android:gravity="center_vertical"
        android:hint="@string/edit_sure_wallet_password"
        android:inputType="numberPassword"
        android:maxLines="1"
        android:paddingLeft="@dimen/dp_5"
        android:textColor="@color/color_1"
        android:textColorHint="@color/color_2"
        android:textCursorDrawable="@drawable/edt_cursor_color"
        android:textSize="@dimen/font_13" />


    <Button
        android:id="@+id/bt_determine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_47"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_marginEnd="@dimen/dp_15"
        android:background="@drawable/bg_blue_168_shape"
        android:text="@string/determine"
        android:textColor="@color/white"
        android:textSize="@dimen/font_17" />
</LinearLayout>