<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/rg_tab"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/dp_5">

        <RadioButton
            android:id="@+id/rb_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/tab_main_selector"
            android:gravity="center_horizontal|bottom"
            android:paddingBottom="@dimen/dp_5"
            android:text="@string/tab_one"
            android:textSize="@dimen/font_10"
            android:textColor="@drawable/text_color_selector" />

        <RadioButton
            android:id="@+id/rb_discover"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/tab_discover_selector"
            android:gravity="center_horizontal|bottom"
            android:paddingBottom="@dimen/dp_5"
            android:text="@string/tab_two"
            android:textSize="@dimen/font_10"
            android:textColor="@drawable/text_color_selector" />

        <RadioButton
            android:id="@+id/rb_mine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/tab_mine_selector"
            android:gravity="center_horizontal|bottom"
            android:paddingBottom="@dimen/dp_5"
            android:text="@string/tab_three"
            android:textSize="@dimen/font_10"
            android:textColor="@drawable/text_color_selector" />
    </RadioGroup>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/rg_tab" />
</RelativeLayout>