<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_round"
    android:maxHeight="@dimen/dp_200"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round">

        <LinearLayout
            android:id="@+id/iv_back"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_40"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_15"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="@dimen/dp_15"
                android:layout_height="@dimen/dp_15"
                android:src="@drawable/btn_back_black" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/dp_15"
            android:text="@string/change_name"
            android:textColor="@color/color_ff"
            android:textSize="@dimen/font_15" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.pay.poriot.ui.widget.CleanableEditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_47"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_marginEnd="@dimen/dp_15"
            android:background="@color/color_3"
            android:gravity="center_vertical"
            android:hint="@string/edit_input_wallet_name"
            android:maxLines="1"
            android:paddingLeft="@dimen/dp_7"
            android:textColor="@color/color_1"
            android:textColorHint="@color/color_2"
            android:textCursorDrawable="@drawable/edt_cursor_color"
            android:textSize="@dimen/font_16" />


        <Button
            android:id="@+id/bt_determine"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_47"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_marginEnd="@dimen/dp_15"
            android:background="@drawable/bg_blue_168_shape"
            android:onClick="onClick"
            android:text="@string/determine"
            android:textColor="@color/white"
            android:textSize="@dimen/font_15" />

    </LinearLayout>
</LinearLayout>